* Changelog
** [0.3.0-alpha.1] - [2021-03-15 Mon] (Week 8)
*** Added
    - Added new view, TabbedView, that uses tabs to combine the positives of single-entry and double-entry Views
    - Added a background to SingleEntryView and TabbedView
    - Added functionality for grace notes and repeat measures
    - Added the ability to make a test coverage report
    - Added more tests in the frontend and backend
    - Created internal grammar for drum tabs
*** Removed
    - It is no longer possible to resize the windows of SingleEntryView and TabbedView.  This was removed because of bugs it caused in combination with the new background; it will be added back if these bugs are fixed.
*** Fixed
    - The issue fixed in v0.2.2 was not fixed for drag-and-drop input
** [0.2.2] - [2021-03-10 Wed] 
*** Fixed
    - Fixed an issue that caused some text tabs to fail when loaded from a file, but not copy-pasted
** [0.2.1] - [2021-03-08]
*** Added
    - Started working on drum tab support
    - Added warning system (which doesn't halt parsing)
*** Changed
    - Changed theme from Swing default to system theme
** [0.2.0] - [2021-02-28] (Midterm Submission)
*** Added
    - Added more tests for both the frontend and backend
    - Added a model
    - When selecting a file, the appropriate file extension will be chosen for you
    - Added the ability to convert and save with one button press
    - The SingleEntryView can highlight the approximate location of errors
*** Changed
    - Changed parsing method to a parse tree using ANTLR
    - Errors are now reported via a dialog box.
** [0.1.0] - [2021-02-17] (First Prototype)
*** Added
    - Set up Gradle building
    - Created README and instruction manual
    - You can drag and drop text tab files into the input box
    - The outputted MusicXML now fully conforms to the standard.
    - Added input validation
    - Created tests for backend
*** Changed
    - Tweaked requirements from PeerScholar feedback